--- a/CSS/Animal Merchandise.css
+++ b/CSS/Animal Merchandise.css
@@ -12,6 +12,7 @@
 .home h1 {
     font-family: 'Abril Fatface', cursive;
     font-size: 3.5em;
+    margin-top: 3em;
 }
 
 .home h2 {
@@ -32,8 +33,8 @@ main h3 {
 
 main {
     display: grid;
-    grid-template: repeat(6, 1fr)/ repeat(2, 1fr);
-    grid-gap: 270px 20px;
+    grid-template: repeat(5, 1fr)/ repeat(2, 1fr);
+    grid-gap: 75px 50px;
     padding: 2em 7em;
 }
 
@@ -42,6 +43,7 @@ main {
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #image1:hover {
@@ -49,13 +51,15 @@ main {
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #image2 {
     background-image: url('/Images/totefront.PNG');
     width: 600px;
-    height: 660px;
+    height: 671px;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #image2:hover {
@@ -63,6 +67,7 @@ main {
     width: 600px;
     height: 660px;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #image3 {
@@ -70,6 +75,7 @@ main {
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #image4 {
@@ -77,6 +83,7 @@ main {
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #image5 {
@@ -84,6 +91,7 @@ main {
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #image5:hover {
@@ -91,6 +99,7 @@ main {
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #image6 {
@@ -98,6 +107,7 @@ main {
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #image6:hover {
@@ -105,6 +115,7 @@ main {
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #image7 {
@@ -112,6 +123,7 @@ main {
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #image7:hover {
@@ -119,6 +131,7 @@ main {
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #image8 {
@@ -126,6 +139,7 @@ main {
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #image8:hover {
@@ -133,20 +147,23 @@ main {
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #image9 {
     background-image: url('/Images/keychainfront.PNG');
-    width: 650px;
+    width: 700px;
     height: 660px;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #image9:hover {
     background-image: url('/Images/keychainback.PNG');
-    width: 650px;
+    width: 700px;
     height: 660px;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #image10 {
@@ -154,6 +171,8 @@ main {
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
+    background-size: cover;
+    margin-bottom: 300px;
 }
 
 .options {
@@ -167,9 +186,12 @@ button {
     background-color: rgb(41, 249, 41);
     font-weight: bold;
 }
-/* .footerclass {
+
+#purchase {
     position: relative;
-  } */
+    left: 600px;
+    top: -100px;
+}
 
 @media only screen and (max-width: 760px) {
 
