--- a/CSS/main-rwd.css
+++ b/CSS/main-rwd.css
@@ -1,6 +1,5 @@
 .container {
     display: grid;
-    height: 100vh;
     grid-template-columns: 0.5fr 1fr 1fr 0.5fr;
     grid-template-rows: 0.6fr 0.3fr 2fr 1fr 1fr 1fr 1fr 0.5fr;
     grid-template-areas:
@@ -15,8 +14,12 @@
     font-family: 'Avenir', sans-serif;
 }
 body {
-    margin-top: 100px;
+    margin-top: -250px;
     background-color: azure;
+}
+#totopbutton {
+    margin-left: 900px;
+    padding: 15px;
 }
 
 
@@ -89,7 +92,7 @@ header h1 {
 .item_intro {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 0.1fr 0.1fr;
+    grid-template-rows: 0.5fr 0.1fr 0.1fr;
     grid-template-areas:
     "pb"
     "stats"
