--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -39,14 +39,14 @@ span {
   align-items: center;
 }
 #submit {
-  background-color: #262137c9;
+  background-color: #0e4764;
   color: white;
   width: 126px;
   height: 34px;
   font-weight: 600;
 }
 #reset_form {
-  background-color: #262137c9;
+  background-color: #0e4764;
   color: white;
   width: 126px;
   height: 34px;
