--- a/CSS/newsAndFeed.css
+++ b/CSS/newsAndFeed.css
@@ -3,7 +3,7 @@
   justify-content: center;
   margin-top: 20px;
   margin-bottom: 20px;
-  align-items: center;
+  align-items:flex-start;
   box-shadow: 0px 0px 33px #04040426;
   border-radius: 10px 10px 10px 10px;
 }
@@ -12,6 +12,8 @@
   height:260px;
   width:310px;
 }
+
+
 .all_content{
   padding: 20px 20px;
   margin: 0px 90px;
@@ -29,10 +31,25 @@
   font-size: 1em;
 }
 .social_media_icons {
-  padding-bottom: 20px;
+  padding-bottom: 10px;
+  padding-top: 10px;
 }
 .pagings a {
   padding-right: 10px;
+}
+
+.fa-heart{
+  color: gray;
+}
+.likedclass{
+  color: red;
+}
+
+#firstpara , #secoundpara, #thirdpara, #forthpara{
+  display: none;
+}
+.marginbottom{
+  margin-bottom: 0px;
 }
 
 /* -----mobile view ----- */
@@ -54,6 +71,9 @@
     width: 65vw;
 
   }
+  .marginbottom{
+    margin-bottom: 0px;
+  }
   .social_feedscontent {
     padding: 0px 10px;
     border-radius: 0px 10px 10px 0px;
@@ -65,7 +85,8 @@
     font-size: 1em;
   }
   .social_media_icons {
-    padding-bottom: 20px;
+    padding-bottom: 10px;
+    padding-top: 10px;
   }
   .pagings a {
     padding-right: 10px;
