--- a/CSS/page1_belugawhale.css
+++ b/CSS/page1_belugawhale.css
@@ -3,7 +3,7 @@ html {
   width: fit-content;
   margin-left: 10px;
   margin-right: 13px;
-  font-family: cursive;
+  font-family: Verdana, sans-serif;
   background-image: url(../images/beluga/beluga-bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
