--- a/CSS/page1_belugawhale.css
+++ b/CSS/page1_belugawhale.css
@@ -4,6 +4,7 @@ html {
   margin-left: 10px;
   margin-right: 13px;
   font-family: Verdana, sans-serif;
+  line-height: 30px;
   background-image: url(../images/beluga/beluga-bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -115,7 +116,6 @@ h1 + p {
   color: #5c799c;
   font-weight: 600;
   text-align: center;
-  margin-top: 0;
   font-size: 1.5em;
 }
 
@@ -123,7 +123,7 @@ h1 + p {
   list-style-type: none;
 }
 p {
-  font-size: 20px;
+  font-size: 18px;
   padding: 2px 30px;
   color: white;
 }
@@ -133,7 +133,7 @@ p {
 }
 .facts li {
   color: #0d0f38;
-  font-size: 20px;
+  font-size: 18px;
   padding: 8px 10px;
 }
 h2 {
