--- a/CSS/page2_brownbear.css
+++ b/CSS/page2_brownbear.css
@@ -1,13 +1,14 @@
 /* ----- desktop view ------- */
 html {
   width: fit-content;
-  margin-left: 10px;
-  margin-right: 13px;
-  font-family: cursive;
+  font-family: Verdana, sans-serif;
   background-image: url(../images/brownbear/bear-background.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+}
+body{
+  margin: auto;
 }
 .section1 {
   display: flex;
@@ -15,22 +16,31 @@ html {
   align-items: center;
   column-gap: 60px;
 }
+#fullContent p {
+  font-size: 17px;
+  padding: 2px 30px;
+  color: white;
+  line-height: 30px;
+}
 .intro {
   display: flex;
   align-items: center;
   justify-content: space-around;
 }
-.intropara {
+#intropara {
   flex-basis: 54em;
 }
-.intropara p {
+#intropara p {
+  font-size: 18px;
   color: black;
+  line-height: 30px;
 }
 .box {
   flex-basis: 20em;
   padding: 20px 0;
 }
 .distribution {
+  padding: 50px 8px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -43,7 +53,7 @@ html {
 }
 .habitat {
   display: flex;
-  padding-top: 50px;
+  padding: 50px 8px;
   flex-direction: row-reverse;
   align-items: center;
   column-gap: 26px;
@@ -55,14 +65,14 @@ html {
 .population {
   display: flex;
   align-items: center;
-  padding: 50px 5px;
+  padding: 50px 8px;
   column-gap: 32px;
 }
 .poppara {
   background-color: #6f5441;
   border-radius: 9px;
 }
-img {
+#fullContent img {
   width: 540px;
   height: 310px;
   border-radius: 9px;
@@ -72,6 +82,7 @@ img {
   height: 400px;
 }
 .diet {
+  padding: 50px 8px;
   display: flex;
   align-items: center;
   column-gap: 32px;
@@ -85,7 +96,7 @@ img {
   display: flex;
   align-items: center;
   column-gap: 32px;
-  padding: 50px 5px;
+  padding: 50px 8px;
 }
 .matingpara {
   background-color: #35652bdb;
@@ -100,34 +111,29 @@ h1 {
   color: #3d3836;
   text-align: center;
   text-shadow: 2px 3px #af9898;
+  line-height: 1em;
 }
 
 .box ul {
   list-style-type: none;
 }
-p {
-  font-size: 20px;
-  padding: 2px 30px;
-  color: white;
-}
+
 .facts ul {
   list-style-image: url(../images/brownbear/bear-icon.png);
   padding: 0px 4em 19px;
 }
 .facts li {
   color: #0d0f38;
-  font-size: 20px;
+  font-size: 18px;
   padding: 8px 10px;
 }
-h2 {
+#fullContent h2 {
   font-size: 2em;
   font-weight: 700;
   color: #0d0a09e6;
-  margin-top: 0;
-  padding-top: 10px;
   padding-left: 1em;
 }
-h3 {
+#fullContent h3 {
   font-weight: 600;
   color: #f5f5dcd1;
   font-size: 22px;
