--- a/CSS/beever.css
+++ b/CSS/beever.css
@@ -1,8 +1,7 @@
 .container {
     display: grid;
-    height: 100vh;
     grid-template-columns: 0.5fr 1fr 1fr 0.5fr;
-    grid-template-rows: 0.6fr 0.3fr 2fr 1fr 1fr 1fr 1fr 0.5fr;
+    grid-template-rows: 0.1fr 0.05fr 1fr 0.5fr 0.5fr 0.5fr 0.5fr;
     grid-template-areas:
     "nav nav nav nav"
     ". header header ."
@@ -18,7 +17,43 @@ body {
     margin-top: 100px;
     background-color: rgb(120, 208, 168);
 }
-
+#totopbutton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    border: 1px solid #ddd;
+    width: 100%;
+    font-family: Arial, sans-serif;
+    font-weight: bolder;
+    font-size: x-large;
+    transition-duration: 0.4s;
+}
+#totopbutton:hover {
+    cursor: pointer;
+    background-color: rgb(97, 97, 90);
+    color: white;
+}
+#funfactsbutton {
+    width: 100%;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    background-color: white; 
+    color: black; 
+    border: 2px solid #00ba28;
+    font-family: Arial, sans-serif;
+    font-weight: bolder;
+    font-size: x-large;
+    margin-bottom: 30px;
+}
+#funfactsbutton:hover {
+    background-color: #00ba28; 
+    color: white;
+}
 
 /* NAV CSS */
 /* .item_nav {
@@ -201,7 +236,6 @@ header h1 {
 #life_img {
     grid-area: life_img;
     width: 100%;
-    margin-bottom: -20px;
     padding-left: 20px;
 }
 #life_p {
@@ -258,6 +292,7 @@ header h1 {
     background-color: white;
     grid-area: population;
     border: 2px solid #0D0F38;
+    margin-bottom: -75px;
 }
 #pop_h2 {
     grid-area: pop_h2;
