--- a/CSS/Arctic Hare.css
+++ b/CSS/Arctic Hare.css
@@ -30,6 +30,14 @@ img{
     justify-content: center;
 }
 
+#class00, .class0 img {
+    height: 400px;
+}
+
+#slides img {
+    display: none;
+}
+
 /* Center, one-line paras */
 .class1 {
     text-align: center;
@@ -147,16 +155,13 @@ h2{
     min-width: 1360px;
     max-width: 1400px;
 } */
-/* .footerclass {
-    position: relative;
-    margin-top: 60rem;
-  } */
-@media only screen and (max-width: 760px) {
+
+@media only screen and (max-width: 950px) {
     body{
         font-size: 0.6em;
     }
 
-    #class0{
+    #class00, .class0 img{
         height: 50%;
         width: 50%;
     }
@@ -208,8 +213,5 @@ h2{
         padding-bottom: 0px;
         margin-bottom: 0px;
     }
-    /* .footerclass {
-        position: relative;
-        margin-top: 0rem;
-      } */
+    
 }
