--- a/CSS/alpaka.css
+++ b/CSS/alpaka.css
@@ -1,5 +1,6 @@
 /* -----desktop view ----- */
 @media only screen and (min-width: 760px) {
+
   body {
     margin: 0 auto;
   }
@@ -7,6 +8,25 @@
     margin-top: 6rem;
     display: flex;
   }
+  .factslist p {
+    display: none;
+    color: white;
+}
+.factslist h2{
+  cursor: pointer;
+font-family: century-gothic, sans-serif;
+}
+.factslist div{
+  background: linear-gradient(to right, #1c7795 6%, #3333ff 100%);
+  width: 100%;
+  padding-left: 20px;
+  color: white;
+  border-radius: 10px;
+  margin-bottom: 5px;
+}
+h2 .minus{
+background-color: blueviolet;
+}
   .banner img {
     width: 60%;
   }
@@ -109,6 +129,7 @@
   .secoundary_head {
     text-align: center;
   }
+  
   .banner {
     /* margin-top: 6rem; */
     display: flex;
@@ -202,7 +223,7 @@
   }
   .factslist {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: space-around;
   }
   .facts {
@@ -212,4 +233,20 @@
     position: relative;
     margin-top: 33rem;
   } */
+
+  .factslist p {
+    display: none;
+    color: white;
+}
+.factslist h2{
+font-family: century-gothic, sans-serif;
+}
+.factslist div{
+  background: linear-gradient(to right, #1c7795 6%, #3333ff 100%);
+  width: 100%;
+  padding-left: 20px;
+  color: white;
+  border-radius: 10px;
+  margin-bottom: 5px;
+}
 }
