project phase 2 and 3

--- a/CSS/AnimalMerchandise.css
+++ b/CSS/AnimalMerchandise.css
@@ -197,6 +197,11 @@ main {
     text-align: center;
 }
 
+.options1 {
+    margin-top: 640px;
+    text-align: center;
+}
+
 button {
     width: 140px;
     height: 40px;
