--- a/CSS/AnimalMerchandise.css
+++ b/CSS/AnimalMerchandise.css
@@ -139,7 +139,7 @@ main {
 
 /* Grocery Bag Back */
 #image7:hover {
-    background-image: url('/Images/grocerybagback.PNG');
+    background-image: url('/Images/grocerbagback.PNG');
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
@@ -150,7 +150,7 @@ main {
 #image8 {
     background-image: url('/Images/babybibfront.PNG');
     width: 650px;
-    height: 660px;
+    height: 650px;
     background-repeat: no-repeat;
     background-size: contain;
 }
@@ -159,7 +159,7 @@ main {
 #image8:hover {
     background-image: url('/Images/babybibback.PNG');
     width: 650px;
-    height: 660px;
+    height: 650px;
     background-repeat: no-repeat;
     background-size: contain;
 }
@@ -169,15 +169,6 @@ main {
     background-image: url('/Images/keychainfront.PNG');
     width: 650px;
     height: 660px;
-    background-repeat: no-repeat;
-    background-size: contain;
-}
-
-/* Keychain Back */
-#image9:hover {
-    background-image: url('/Images/keychainback.PNG');
-    width: 650px;
-    height: 620px;
     background-repeat: no-repeat;
     background-size: contain;
 }
