--- a/CSS/AnimalMerchandise.css
+++ b/CSS/AnimalMerchandise.css
@@ -3,19 +3,19 @@
     /* margin-top: 10rem; */
 }
 
-.navclass, .home h1, h2 {
+.navclass, header h1, header h2 {
     width: 100%;
     text-align: center;
     /* text-shadow: 2px 2px 2px gray; */
 }
 
-.home h1 {
+header h1 {
     font-family: 'Abril Fatface', cursive;
     font-size: 3.5em;
     margin-top: 3em;
 }
 
-.home h2 {
+header h2 {
     font-family: 'Signika Negative', sans-serif;
     font-size: 2em;
     margin-bottom: 130px;
@@ -40,7 +40,7 @@ main {
 
 /* T-Shirt Front */
 #image1 {
-    background-image: url('/Images/tfront.PNG');
+    background-image: url('../Images/tfront.PNG');
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
@@ -49,7 +49,7 @@ main {
 
 /* T-Shirt Back */
 #image1:hover {
-    background-image: url('/Images/tback.PNG');
+    background-image: url('../Images/tback.PNG');
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
@@ -58,7 +58,7 @@ main {
 
 /* Tote Bag Front */
 #image2 {
-    background-image: url('/Images/totefront.PNG');
+    background-image: url('../Images/totefront.PNG');
     width: 600px;
     height: 671px;
     background-repeat: no-repeat;
@@ -67,7 +67,7 @@ main {
 
 /* Tote Bag Back */
 #image2:hover {
-    background-image: url('/Images/toteback.PNG');
+    background-image: url('../Images/toteback.PNG');
     width: 600px;
     height: 660px;
     background-repeat: no-repeat;
@@ -76,7 +76,7 @@ main {
 
 /* Cap */
 #image3 {
-    background-image: url('/Images/cap.PNG');
+    background-image: url('../Images/cap.PNG');
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
@@ -85,7 +85,7 @@ main {
 
 /* Apron */
 #image4 {
-    background-image: url('/Images/apron.PNG');
+    background-image: url('../Images/apron.PNG');
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
@@ -94,7 +94,7 @@ main {
 
 /* Baby Blanket Front */
 #image5 {
-    background-image: url('/Images/babyblanketfront.PNG');
+    background-image: url('../Images/babyblanketfront.PNG');
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
@@ -103,7 +103,7 @@ main {
 
 /* Baby Blanket Back */
 #image5:hover {
-    background-image: url('/Images/babyblanketback.PNG');
+    background-image: url('../Images/babyblanketback.PNG');
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
@@ -112,7 +112,7 @@ main {
 
 /* Pillow Front */
 #image6 {
-    background-image: url('/Images/pillowfront.PNG');
+    background-image: url('../Images/pillowfront.PNG');
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
@@ -121,7 +121,7 @@ main {
 
 /* Pillow Back */
 #image6:hover {
-    background-image: url('/Images/pillowback.PNG');
+    background-image: url('../Images/pillowback.PNG');
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
@@ -130,7 +130,7 @@ main {
 
 /* Grocery Bag Front */
 #image7 {
-    background-image: url('/Images/grocerybagfront.PNG');
+    background-image: url('../Images/grocerybagfront.PNG');
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
@@ -139,7 +139,7 @@ main {
 
 /* Grocery Bag Back */
 #image7:hover {
-    background-image: url('/Images/grocerbagback.PNG');
+    background-image: url('../Images/grocerbagback.PNG');
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
@@ -148,7 +148,7 @@ main {
 
 /* Baby Bib Front */
 #image8 {
-    background-image: url('/Images/babybibfront.PNG');
+    background-image: url('../Images/babybibfront.PNG');
     width: 650px;
     height: 650px;
     background-repeat: no-repeat;
@@ -157,16 +157,16 @@ main {
 
 /* Baby Bib Back */
 #image8:hover {
-    background-image: url('/Images/babybibback.PNG');
+    background-image: url('../Images/babybibback.PNG');
     width: 650px;
     height: 650px;
     background-repeat: no-repeat;
     background-size: contain;
 }
 
-/* Keychain Front */
+/* Clock */
 #image9 {
-    background-image: url('/Images/keychainfront.PNG');
+    background-image: url('../Images/Capture.PNG');
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
@@ -175,9 +175,9 @@ main {
 
 /* Watch */
 #image10 {
-    background-image: url('/Images/watch.PNG');
+    background-image: url('../Images/watch.PNG');
     width: 650px;
-    height: 625px;
+    height: 653px;
     background-repeat: no-repeat;
     background-size: cover;
     margin-bottom: 300px;
@@ -185,11 +185,6 @@ main {
 
 .options {
     margin-top: 670px;
-    text-align: center;
-}
-
-.options1 {
-    margin-top: 640px;
     text-align: center;
 }
 
@@ -214,7 +209,7 @@ button {
         /* grid-template: repeat(11, 1fr)/ repeat(1, minmax(1,1fr)); */
     }
 
-    .home h1, h2 {
+    header h1, header h2 {
         width: 950px;
     }
 }
