project phase 2 and 3

--- a/CSS/AnimalMerchandise.css
+++ b/CSS/AnimalMerchandise.css
@@ -166,7 +166,7 @@ main {
 
 /* Clock */
 #image9 {
-    background-image: url('../Images/Capture.PNG');
+    background-image: url('../Images/clock.png');
     width: 650px;
     height: 660px;
     background-repeat: no-repeat;
