--- a/CSS/polarbear.css
+++ b/CSS/polarbear.css
@@ -55,65 +55,70 @@ body {
     color: white;
 }
 .popup {
-position: fixed;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%) scale(0);
-transition: 200ms ease-in-out;
-border: 1px solid black;
-border-radius: 10px;
-z-index: 10;
-background-color: white;
-width: 800px;
-max-width: 80%;
-font-size: 20px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: 200ms ease-in-out;
+    border: 1px solid black;
+    border-radius: 10px;
+    z-index: 10;
+    background-color: white;
+    width: 800px;
+    max-width: 80%;
+    font-size: 20px;
+    font-family: 'Avenir', sans-serif;
+}
+
+.popup-body ul {
+    color: black;
 }
 
 .popup.active {
-transform: translate(-50%, -50%) scale(1);
+    transform: translate(-50%, -50%) scale(1);
 }
 
 .popup-header {
-padding: 10px 15px;
-display: flex;
-justify-content: space-between;
-align-items: center;
-border-bottom: 1px solid black;
+    padding: 10px 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid black;
 }
 
 .popup-header .title {
-font-size: 30px;
-font-weight: bold;
+    font-size: 30px;
+    font-weight: bold;
 }
 
 .popup-header .close-button {
-cursor: pointer;
-border: none;
-outline: none;
-background: none;
-font-size: 1.25rem;
-font-weight: bold;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background: none;
+    font-size: 1.25rem;
+    font-weight: bold;
 }
 
 .popup-body {
-padding: 10px 15px;
+    padding: 10px 15px;
 }
 
 #overlay {
-position: fixed;
-opacity: 0;
-transition: 200ms ease-in-out;
-top: 0;
-left: 0;
-right: 0;
-bottom: 0;
-background-color: rgba(0, 0, 0, .5);
-pointer-events: none;
+    position: fixed;
+    opacity: 0;
+    transition: 200ms ease-in-out;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .5);
+    pointer-events: none;
 }
 
 #overlay.active {
-opacity: 1;
-pointer-events: all;
+    opacity: 1;
+    pointer-events: all;
 }
 /* NAV CSS */
 /* .item_nav {
@@ -173,11 +178,11 @@ header {
     grid-area: header;
 }
 header h1 {
-        text-align: center;
-        font-family: century-gothic, sans-serif;
-        font-weight: bolder;
-        color: #0D0F38;
-        font-size: 50px;
+    text-align: center;
+    font-family: century-gothic, sans-serif;
+    font-weight: bolder;
+    color: #0D0F38;
+    font-size: 50px;
 }
 
 /* INTRO CSS */
