--- a/CSS/candianlynx.css
+++ b/CSS/candianlynx.css
@@ -1,32 +1,52 @@
-.headimg{
-    height:500px;
-    width:1100px;
-    padding-left: 300px;
-    margin-top: 5rem;
+body{
+    background-image: linear-gradient(60deg, #abecd6 0%, #fbed96 100%);
 }
 
-.container{
+.header{
+    position: relative;
+    max-width: 100%;
+    margin: 0 auto;
+}
+
+.header-img{
+    width: 100%;
+    vertical-align: middle;
+}
+
+.header-text{
+    position: absolute;
+    bottom: 0;
+    background: rgb(0, 0, 0);/* Fallback color */
+    background: rgba(0, 0, 0, 0.5);/* Black background with opacity */
+    color: #ffffff;
+    width: 100%;
+    padding: 20px;
+}
+
+.list-container{
     display: flex;
     justify-content: space-around;
     padding-left: 250px;
+    background-image: linear-gradient(60deg, #abecd6 0%, #fbed96 100%);
 }
 
 .item{
     order: 5;
 }
 
-.title{
-    /* padding-left: 250px; */
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: midnightblue;
-    padding-left: 300px;
+
+
+.desc-div{
+    padding: 10px;
 }
 
 .desc{
-    color:midnightblue;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
-    padding-left: 300px;
+    background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+    border-radius: 10px;
+    color: midnightblue;
+    /* padding-left: 300px; */
 }
 
 .itemhead{
@@ -41,43 +61,87 @@
     font-size: 18px;
 }
 
+.container{
+    display: grid;
+    grid-template-columns: 1fr 1fr ;
+    justify-content: center;
+    /* background: linear-gradient(90deg, #9ebd13 0%, #008552 100%); */
+    /* background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%); */
+    /* background-image: linear-gradient(to top, #fddb92 0%, #d1fdff 100%); */
+    /* background-image: linear-gradient(60deg, #abecd6 0%, #fbed96 100%); */
+}
+
+
+.content-text{
+    align-items: center;
+    bottom: 0;
+    color:midnightblue;
+    width: 100%;
+    padding: 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+    border-radius: 10px;
+    
+}
+
+.content-img{
+    width: 110%; 
+    /* width: 70%; */
+    /* height: 350px; */
+    object-fit: cover;
+    padding: 10px;
+}
+
+.content-button{
+    height: 30px;
+    width: 80px;
+    border-radius: 12px;
+    background-color: rgb(161, 161, 245);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+    font-size: 15px;
+    color:midnightblue;
+    border: none;
+}
+
 /* Image given in content */
-.contentimg{
+/* .contentimg{
     height:340px;
     width: 230px;
     float: left;
     padding-left: 300px;
     padding-top: 50px;
     padding-right: 20px;
-}
+} */
 
 /* Description given in content */
-.content{
+/* .content{
     color:midnightblue;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
 }
 
 /* header given to content */
-.contenthead{
+/* .contenthead{
     color:midnightblue;
     font-size: 24px;
     padding-top: 50px;
 
-}
+}  */
 
 /* Image given in content canadian_lynx_2*/
-.contentimg2{
+/* .contentimg2{
     float: right;
     height:340px;
     width: 230px;
     padding-left: 20px;
     padding-top: 150px;
     padding-right: 20px;
-}
+} */
 
 /* Description given in content */
-.content2{
+/* .content2{
     color:midnightblue;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
@@ -92,7 +156,7 @@
     padding-top: 150px;
     padding-bottom: 5px;
     padding-left: 300px;
-}
+} */
 
 .list{
     color:midnightblue;
@@ -101,24 +165,109 @@
     padding-left: 300px;
 }
 
-/* funfacts heading */
-.heading{
-    color:midnightblue;
-    font-size: 24px;
-    padding-top: 0px;
-    padding-left: 300px;
 
-}
 
-/* canadian_lynx_3 image */
-.imagecontent{
-    height:550px;
-    width:1100px;
-    padding-left: 300px;
-}
 
 @media only screen and (max-width: 760px){
-    .headimg{
+
+    body{
+        background-image: linear-gradient(60deg, #abecd6 0%, #fbed96 100%);
+    }
+    
+    .header{
+        position: relative;
+        max-width: 89%;
+        margin: 0 auto;
+    }
+    
+    .header-img{
+        width: 52%;
+        vertical-align: middle;
+    }
+    
+    .header-text{
+        /* position: absolute; */
+        /* bottom: 0; */
+        background: rgb(0, 0, 0);/* Fallback color */
+        background: rgba(0, 0, 0, 0.5);/* Black background with opacity */
+        color: #ffffff;
+        font-size: 10px;
+    }
+    
+    .list-container{
+        display: flex;
+        width: 10px;
+        justify-content: space-around;
+        /* padding-left: 250px; */
+        background-image: linear-gradient(60deg, #abecd6 0%, #fbed96 100%);
+    }
+    
+    .item{
+        order: 5;
+    }
+
+    
+    .desc{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 10px;
+        background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+        border-radius: 10px;
+        color: midnightblue;
+        /* padding-left: 300px; */
+    }
+    
+    .itemhead{
+        color: crimson;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 12px;
+    }
+
+    .itemcontent{
+        color: midnightblue;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 12px;
+    }
+    
+    
+    
+    
+    .content-text{
+        align-items: center;
+        bottom: 0;
+        color:midnightblue;
+        /* width: 100%; */
+         padding: 10px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 18px;
+        background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+        border-radius: 10px;
+        
+    } 
+    
+    /* .content-img{
+        width: 110%; 
+        /* width: 70%; */
+        /* height: 350px; */
+        /* object-fit: cover;
+        padding: 10px;
+    } */
+     
+    .content-button{
+        height: 30px;
+        width: 80px;
+        border-radius: 12px;
+        background-color: rgb(161, 161, 245);
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+        font-size: 15px;
+        color:midnightblue;
+        border: none;
+    }
+
+
+
+
+    /* .headimg{
         height:150px;
         width:300px;
         padding-left: 50px;
@@ -216,7 +365,7 @@
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         padding-left: 50px;
     }
-    
+     */
 
 
     
