--- a/CSS/candianlynx.css
+++ b/CSS/candianlynx.css
@@ -192,6 +192,7 @@ body{
         background: rgba(0, 0, 0, 0.5);/* Black background with opacity */
         color: #ffffff;
         font-size: 10px;
+        width: 52%;
     }
     
     .list-container{
@@ -228,6 +229,15 @@ body{
         font-size: 12px;
     }
     
+    .container{
+        display: grid;
+        grid-template-columns: 1fr 1fr ;
+        justify-content: center;
+        /* background: linear-gradient(90deg, #9ebd13 0%, #008552 100%); */
+        /* background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%); */
+        /* background-image: linear-gradient(to top, #fddb92 0%, #d1fdff 100%); */
+        /* background-image: linear-gradient(60deg, #abecd6 0%, #fbed96 100%); */
+    }
     
     
     
