--- a/CSS/page2_brownbear.css
+++ b/CSS/page2_brownbear.css
@@ -45,7 +45,7 @@ body {
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
-  column-gap: 23px;
+  column-gap: 15px;
   padding: 25px 10px;
 }
 .habitat,
@@ -53,7 +53,7 @@ body {
 .facts {
   display: flex;
   align-items: center;
-  column-gap: 23px;
+  column-gap: 15px;
   padding: 25px 10px;
 }
 .distpara {
@@ -70,7 +70,7 @@ body {
   border-radius: 9px;
 }
 #fullContent img {
-  width: 540px;
+  width: 500px;
   height: 310px;
   border-radius: 9px;
 }
@@ -90,7 +90,7 @@ body {
 main {
   margin-top: 8em;
 }
-h1 {
+#fullContent h1 {
   font-size: 4em;
   color: #3d3836;
   text-align: center;
@@ -100,15 +100,7 @@ h1 {
 .box ul {
   list-style-type: none;
 }
-.facts ul {
-  list-style-image: url(../images/brownbear/bear-icon.png);
-  padding: 0px 5px 19px 4em;
-}
-.facts li {
-  color: #0d0f38;
-  font-size: 18px;
-  padding: 8px 10px;
-}
+
 #fullContent h2 {
   font-size: 2em;
   font-weight: 700;
@@ -133,6 +125,12 @@ h1 {
 }
 #slideshow_images {
   margin-right: 1em;
+}
+#accordion h3 {
+  color: #35271b;
+  background-color: #fbf6f0;
+  border: 2px solid #8a370a;
+  width: 35em;
 }
 
 /* ----- mobile view ------- */
@@ -173,5 +171,8 @@ h1 {
   }
   main {
     margin-top: 0;
+  }
+  #accordion h3 {
+    margin-bottom: 12px;
   }
 }
