--- a/CSS/page3_moose.css
+++ b/CSS/page3_moose.css
@@ -66,7 +66,7 @@ body {
   border-radius: 9px;
   color: beige;
 }
-#fullContent img {
+img {
   width: 540px;
   height: 310px;
   border-radius: 9px;
